--- a/style.css
+++ b/style.css
@@ -1,44 +1,50 @@
-
-body {background-color : #ededed; font-family : "Open Sans", sans-serif;}
-
-h1 {padding: 40px; text-align: center; font-size: 1.5em;}
-    
-option a {text-decoration : none; color : #2d2f31;}
-    
-    
-datalist {
-      width : 300px; 
-      background: #d9d9d9;
-      margin : 40px auto; 
-}
-    
-input {
-      padding : 30px;
-      background : #2d2f31; 
-      color : white;
-      font-size : 1.2em;
-      font-variant : small-caps;
-      cursor : pointer;
-      display: block;
-}
-    
-input::after {
-    float: right;
-    right: 10%;
-    content: "+";
-}
-    
-.slide {
-    clear:both;
-    width:100%;
-    height:0px;
-    overflow: hidden;
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #004882;
+  }
+  
+.styling {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+.styling select {
+    background-color: #0563af;
+    color: white;
+    padding: 12px;
+    width: 250px;
+    border: none;
+    font-size: 20px;
+    box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2);
+    -webkit-appearance: button;
+    appearance: button;
+    outline: none;
+  }
+  
+.styling::before {
+    content: "\f13a";
+    font-family: FontAwesome;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 20%;
+    height: 100%;
     text-align: center;
-    transition: height .4s ease;
-}
-    
-.slide option {padding : 30px;}
-    
-#Esclations_reqs {position: absolute; opacity: 0; height: 0px;}    
-    
-#Esclations_reqs:checked + .slide {height: 300px;}
+    font-size: 28px;
+    line-height: 45px;
+    color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.1);
+    pointer-events: none;
+  }
+  
+.styling:hover::before {
+    color: rgba(255, 255, 255, 0.6);
+    background-color: rgba(255, 255, 255, 0.2);
+  }
+  
+.styling select option {
+    padding: 30px;
+  }
