--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #004882;
+    background-color: #c5c9cc;
   }
   
 .styling {
@@ -48,15 +48,16 @@ body {
 .styling select option {
     padding: 50px;
   }
+/* 
 .mainb{
     color: black;
     text-align: center;
     margin-top: 30%; ;
     /* margin-bottom: 50%; */
-    margin-left: 43%;
+    /* margin-left: 43%;
     margin-right: 40%;
     /* margin: 30%; */
-    border-radius: 30%;
+    /* border-radius: 30%;
     width: 10%;
     height: 10%;
     left: 50%;
@@ -65,7 +66,7 @@ body {
     font-size: 150%;
     align-items: center;
     align-content: center;
-}
+} */ */ */
 
 
 /* .buts {
@@ -86,3 +87,48 @@ body {
 }
 
  */
+.center-content {
+    display: grid;
+    place-content: center;
+  }
+  
+.buts {
+    @extend .center-content;
+      height: 100vh;
+  }
+  
+.mainb {
+    @extend .center-content;
+    padding: 10px 30px;
+    font-size: 24px;
+    cursor: pointer;
+    margin-top: 30%; ;
+    margin-bottom: 50%;
+    margin-left: 43%;
+    margin-right: 40%;
+    border-radius: 7px;
+    border-bottom-left-radius: 0;
+    
+    background-color: #15c240;
+    color: var(--feedback-primary-color);
+    
+    transition: all 0.3s;
+}
+.mainb:hover{
+        border-radius: 0px;
+      
+        color: var(--feedback-primary-color);
+        background-color: var(--background-color);
+        background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23ffacac' fill-opacity='0.4'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+        animation: animatedBackground 5s linear infinite alternate;
+    }
+  }
+  
+@keyframes animatedBackground {
+    from {
+        background-position: 0 0;
+    }
+    to {
+        background-position: 100% 0;
+    }
+}
