--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    background-image:url("./medical.jpg");
     background-color: #c5c9cc;
   }
   
@@ -15,7 +16,7 @@ body {
     background-color: #0563af;
     color: white;
     padding: 12px;
-    width: 250px;
+    width: 100%;
     border: none;
     font-size: 20px;
     box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2);
@@ -23,7 +24,26 @@ body {
     appearance: button;
     outline: none;
   }
-  
+.header{
+    text-align: center;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* color: darkblue; */
+    /* text-shadow: darkgoldenrod; */
+    color: rgb(9, 24, 240);
+    text-align: center;
+    -webkit-animation: glow 1s ease-in-out infinite alternate;
+    -moz-animation: glow 1s ease-in-out infinite alternate;
+    animation: glow 1s ease-in-out infinite alternate;
+}
+
+@-webkit-keyframes glow {
+    from {
+      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+    }
+    to {
+      text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+    }
+  }
 .styling::before {
     content: "\f13a";
     font-family: FontAwesome;
@@ -35,13 +55,13 @@ body {
     text-align: center;
     font-size: 28px;
     line-height: 45px;
-    color: rgba(255, 255, 255, 0.5);
+    color: rgba(182, 11, 11, 0.5);
     background-color: rgba(255, 255, 255, 0.1);
     pointer-events: none;
   }
   
 .styling:hover::before {
-    color: rgba(255, 255, 255, 0.6);
+    color: rgba(59, 16, 214, 0.6);
     background-color: rgba(255, 255, 255, 0.2);
   }
   
@@ -102,9 +122,9 @@ body {
     padding: 10px 30px;
     font-size: 24px;
     cursor: pointer;
-    margin-top: 30%; ;
+    margin-top: 35%;
     margin-bottom: 50%;
-    margin-left: 43%;
+    margin-left: 40%;
     margin-right: 40%;
     border-radius: 7px;
     border-bottom-left-radius: 0;
