--- a/style.css
+++ b/style.css
@@ -129,11 +129,11 @@ body {
     padding: 10px 30px;
     font-size: 24px;
     cursor: pointer;
-    margin-top: 35%;
-    margin-bottom: 50%;
-    margin-left: 40%;
-    margin-right: 40%;
-    border-radius: 7px;
+
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     border-bottom-left-radius: 0;
     
     background-color: #15c240;
